================================================================================
CHANGELOG
================================================================================

	0.4.1.1

	* containers/Note.py: Added `measure` helper function to find out the 
	difference in semitones between two Notes.

================================================================================

	0.4.1
	Jun 26, 2009

	* midi/Sequencer.py: Added an easily extendable general purpose 
	sequencer that can play all the objects in mingus.containers 
	(closes issue #27).
	* midi/fluidsynth.py: Made the fluidsynth sequencer use the new 
	Sequencer module. (closes issue #43)
	* containers/NoteContainer.py: Added consonance and dissonance tests 
	as methods. (closes issue #41)
	* extra/fft.py: A whole new module which can be used to find the 
	frequencies and Notes of raw audio data. (closes issue #42)


================================================================================

	0.4.0.3
	Jun 20, 2009

	* core/intervals.py: Fixed bug in invert.
	* core/intervals.py: Added new functions `is_consonant`, 
	`is_perfect_consonant`, `is_imperfect_consonant`, `is_dissonant` and
	documentation + unit tests. (closes issue #33).
	* containers/NoteContainer.py: Added from_progression_shorthand, 
	from_interval_shorthand, from_chord_shorthand and some shortcuts
	to simplify a lot of use cases. (closes issue #29)


================================================================================

	0.4.0.2 
	Jun 5, 2009

	* core/chords.py: Faster and short pattern matching functions in 
	determine_triad. The rest should follow.
        * core/value.py: Changed instances of eight to eighth (closes #39)
	* core/diatonic.py: Fixed bug in diatonic.int_to_note (closes #40)

================================================================================

	0.4.0.1
	Mar 2, 2009

	* extra/LilyPond.py: Fixed bug in converting the duration to a valid 